service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubchallenge-service
  labels:
    app: kubchallenge
spec:
  type: LoadBalancer
  selector:
    app: kubchallenge
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4000
