ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubchallenge-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubchallenge-service
              port:
                number: 8080
